welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:6: error: illegal start of simple pattern
	case (x,y,z) ==> return true
                         ^answerCell:7: error: '=>' expected but '}' found.
}
^